--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-  <head>
-    <title>HTML</title>
-  </head>
+<!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <title>Accessibilité ma gueule</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
   <body bgcolor="#FFFFE8" topmargin="5">
 
