--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+  <meta >
   <title>Accessibilité ma gueule</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -19,7 +20,7 @@
     <table border="0" cellpadding="0" cellspacing="0" width="771" align="center">
       <tr>
         <td width="200" align="left">
-          <a href="http://www.softastuces.com" title="Accueil de SoftAstuces"><img src="/images/tuto/base_site/logo.gif" width="200" height="60" border="0" alt="SoftAstuces.com"></a>
+          <a href="http://www.softastuces.com" title="Accueil de SoftAstuces"><img src="res/reddington.jpg" width="200" height="100" border="0" alt=""></a>
         </td>
         <td width=571 valign="middle">
           <a href="/astu/index.php"><font color="#400040" size="+1">Les Astuces</font></a> | 
