--- a/web-template/index.html
+++ b/web-template/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
 
-    <title>L'Education & l'accessibilité</title>
+    <title>Everest Bootstrap Multi-purpose Responsive Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="description">
+    <meta content="http://webthemez.com" name="author">
     <!-- css -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
@@ -15,6 +16,10 @@
     <link href="css/flexslider.css" rel="stylesheet">
     <link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 </head>
 
 <body>
