--- a/accessibilite/index.html
+++ b/accessibilite/index.html
@@ -10,15 +10,27 @@
 </head>
 
 <body>
-    <header>
+    <header role="banner">
+        <div id="title">L'Accessibilité dans l'éducation</div>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#news">News</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li style="float:right"><a class="active" href="#about">About</a></li>
+            <li id="about"><a class="active" href="#about">About</a></li>
         </ul>
     </header>
 
+    <nav role="navigation">
+
+    </nav>
+
+    <main role="main">
+
+    </main>
+
+    <footer role="contentinfo">
+
+    </footer>
 
 </body>
 
