--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -20,15 +20,11 @@
 
 <body>
   <header role="banner">
-<<<<<<< HEAD
-    <nav role="navigation" aria-label="Menu principal" class="navbar navbar-expand-lg navbar-light bg-light" id="nav-bar" >
-      <a class="navbar-brand" href="index_flogo_mrtml"><img src="assets/CGI.png" alt="Realité Mixte pour l'accessibilité (Retour
-=======
+
     <nav role="navigation" aria-label="Menu principal" class="navbar navbar-expand-lg navbar-light bg-light"
       id="nav-bar">
       <a class="navbar-brand" href="index_fr.html"><img src="assets/CGI.png" alt="Realité Mixte pour l'accessibilité (Retour
->>>>>>> cbabf9697af498af742872cf5d8b9a15d3e962cb
-        à l'acceuil)">
+        à l'accueil)">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Basculer la navigation">
