--- a/accessibilite/index.html
+++ b/accessibilite/index.html
@@ -13,7 +13,7 @@
     <header role="banner">
         <div id="title">L'Accessibilité dans l'éducation</div>
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="#home">Homeuu</a></li>
             <li><a href="#news">News</a></li>
             <li><a href="#contact">Contact</a></li>
             <li id="about"><a class="active" href="#about">About</a></li>
