--- a/mr4a11y/explore_fr.html
+++ b/mr4a11y/explore_fr.html
@@ -68,7 +68,7 @@
           <div class="col-md-4 text-center" tabindex="0">
             <div class="container2" id="module1">
               <h3>Applications de la réalité mixte</h3>
-              <p class="collapse" id="collapseExample" aria-expanded="false">
+              <p aria-expanded="false">
                 La réalité mixte existe depuis des années, mais ce n'est qu'au cours des 10 dernières années qu'elle est
                 remontée à la surface grâce au développement avancé de smartphones avec Android et iOS, équipés de
                 gyroscopes, de GPS et de caméras qui s'améliorent de plus en plus avec les années. venir. Ce
@@ -84,16 +84,13 @@
                 où la distance représentait un énorme obstacle pour l'éducation. MR a encore de la place pour prouver
                 que cela peut être LA solution dans de telles circonstances.
               </p>
-              <a role="button" class="collapsed" data-toggle="collapse" href="#collapseExample" aria-expanded="false"
-                aria-controls="collapseExample">
-              </a>
             </div>
           </div>
 
           <div class="col-md-4 text-center" tabindex="0">
             <div class="container2" id="module2">
               <h3>Comment la réalité mixte peut aider les personnes handicapées</h3>
-              <div class="collapse" id="collapseExample2" aria-expanded="false">
+              <div aria-expanded="false">
                 Selon des chercheurs et d'autres experts en technologie, il est possible d'utiliser la technologie AR et
                 VR pour améliorer la qualité des personnes handicapées.
                 La réalité virtuelle peut potentiellement aider les personnes handicapées de différentes manières.
@@ -121,16 +118,13 @@
                   plus de clarté.
                 </ol>
               </div>
-              <a role="button" class="collapsed" data-toggle="collapse" href="#collapseExample2" aria-expanded="false"
-                aria-controls="collapseExample2">
-              </a>
             </div>
           </div>
 
           <div class="col-md-4 text-center" tabindex="0">
             <div class="container2" id="module3">
               <h3>Les opportunités pour les utilisateurs handicapés ne peuvent que croître</h3>
-              <p class="collapse" id="collapseExample3" aria-expanded="false">
+              <p aria-expanded="false">
                 La raison pour laquelle la RA et la RV sont si appréciées des joueurs et d'autres industries est
                 qu'elles rendent l'impossible possible. Pour certains, ce ne sont que des jeux qui offrent une nouvelle
                 opportunité dans un monde fantastique; pour d'autres, ce sont des outils de résolution de problèmes dans
@@ -143,9 +137,6 @@
                     alt="enfant autiste apprenant grâce à la réalité virtuelle"></span>
 
               </p>
-              <a role="button" class="collapsed" data-toggle="collapse" href="#collapseExample3" aria-expanded="false"
-                aria-controls="collapseExample3">
-              </a>
             </div>
           </div>
 
