--- a/mr4a11y/index.html
+++ b/mr4a11y/index.html
@@ -77,7 +77,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/handicap_using_vr.jpg" class="d-block w-100" alt="First image slide of a handcap using VR">
+            <img src="assets/image_edu1.jpeg" class="d-block w-100" alt="First image slide of a handcap using VR">
           </div>
           <div class="carousel-item">
             <img src="assets/kid_playing_with_VR.jpg" class="d-block w-100"
