--- a/mr4a11y/aboutUs_fr.html
+++ b/mr4a11y/aboutUs_fr.html
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index_fr.html">ACCEUIL</a>
+            <a class="nav-link" href="index_fr.html">ACCUEIL</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="explore_fr.html">EXPLORER</a>
