--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -23,7 +23,7 @@
 
     <nav role="navigation" aria-label="Menu principal" class="navbar navbar-expand-lg navbar-light bg-light"
       id="nav-bar">
-      <a class="navbar-brand" href="index_fr.html"><img src="assets/CGI.png" alt="Realité Mixte pour l'accessibilité (Retour
+      <a class="navbar-brand" href="index_fr.html"><img src="assets/Education.png" alt="Realité Mixte pour l'accessibilité (Retour
         à l'accueil)">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -79,15 +79,15 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/handicap_using_vr.jpg" class="d-block w-100"
+            <img src="assets/image_edu1.jpeg" class="d-block w-100"
               alt="Première diapositive d'image d'un casque à l'aide de la réalité virtuelle">
           </div>
           <div class="carousel-item">
-            <img src="assets/kid_playing_with_VR.jpg" class="d-block w-100" alt="
+            <img src="assets/image_edu2.jpeg" class="d-block w-100" alt="
                 Deuxième diapositive d'image d'un enfant jouant avec la réalité virtuelle">
           </div>
           <div class="carousel-item">
-            <img src="assets/VR_removes_disability_barriers.jpg" class="d-block w-100"
+            <img src="assets/image_edu3.jpeg" class="d-block w-100"
               alt="Troisième diapositive d'image de jeux vidéo pour personnes en fauteuil roulant">
           </div>
         </div>
