--- a/mr4a11y/aboutUs_fr.html
+++ b/mr4a11y/aboutUs_fr.html
@@ -23,7 +23,7 @@
   <header role="banner">
     <nav role="navigation" aria-label="Menu principal" class="navbar navbar-expand-lg navbar-light bg-light"
       id="nav-bar">
-      <a class="navbar-brand" href="index.html"><img src="assets/CGI.png" alt="Mixed reality for accessibility (Back
+      <a class="navbar-brand" href="index.html"><img src="assets/Education.png" alt="Mixed reality for accessibility (Back
           to Home)"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Basculer la navigation">
