--- a/mr4a11y/index.html
+++ b/mr4a11y/index.html
@@ -23,7 +23,7 @@
 <body>
   <header style="background-color: #f4f4f4" role="banner">
     <nav role="navigation" aria-label="Main Menu" class="navbar navbar-expand-lg navbar-light bg-light" id="nav-bar">
-      <a class="navbar-brand" href="index.html"><img src="assets/CGI.png" alt="Mixed reality for accessibility (Back
+      <a class="navbar-brand" href="index.html"><img src="assets/Education.png" alt="Mixed reality for accessibility (Back
         to Home)">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -80,11 +80,11 @@
             <img src="assets/image_edu1.jpeg" class="d-block w-100" alt="First image slide of a handcap using VR">
           </div>
           <div class="carousel-item">
-            <img src="assets/kid_playing_with_VR.jpg" class="d-block w-100"
+            <img src="assets/image_edu2.jpeg" class="d-block w-100"
               alt="Second image slide of a kid playing with VR">
           </div>
           <div class="carousel-item">
-            <img src="assets/VR_removes_disability_barriers.jpg" class="d-block w-100"
+            <img src="assets/image_edu3.jpeg" class="d-block w-100"
               alt="Third image slide of videos games for wheelchaired">
           </div>
         </div>
