--- a/mr4a11y/Contact.html
+++ b/mr4a11y/Contact.html
@@ -46,7 +46,7 @@
         </ul>
         <div>
           <a class="btn btn-link" lang="en" hreflang="en" href="Contact_fr.html"><img src="assets/french flag.jpg"
-              alt="" width="20" height="20"> Version Française</a>
+              alt="" width="20" height="20">Passer en Français</a>
         </div>
       </div>
     </nav>
