--- a/mr4a11y/aboutUs_fr.html
+++ b/mr4a11y/aboutUs_fr.html
@@ -47,7 +47,7 @@
         </ul>
         <div>
           <a class="btn btn-link" lang="fr" hreflang="fr" href="aboutUs.html"><img src="assets/british flag.png" alt=""
-              width="20" height="20"> English Version</a>
+              width="20" height="20">Switch to English</a>
         </div>
       </div>
     </nav>
