--- a/mr4a11y/index.html
+++ b/mr4a11y/index.html
@@ -57,7 +57,7 @@
         </ul>
         <div>
           <a class="btn btn-link" lang="en" hreflang="en" href="index_fr.html"><img src="assets/french flag.jpg" alt=""
-              width="20" height="20"> Version Française</a>
+              width="20" height="20">Passer en Français</a>
           <form class="form-inline my-2 my-lg-0" role="search">
             <input class="form-control mr-sm-2" type="search" placeholder="Enter Search Terms" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="btn">Search</button>
