--- a/mr4a11y/index.html
+++ b/mr4a11y/index.html
@@ -57,7 +57,7 @@
         </ul>
         <div>
           <a class="btn btn-link" lang="en" hreflang="en" href="index_fr.html"><img src="assets/french flag.jpg" alt=""
-              width="20" height="20">Passer en Français</a>
+              width="20" height="20"> Passer en Français</a>
           <form class="form-inline my-2 my-lg-0" role="search">
             <input class="form-control mr-sm-2" type="search" placeholder="Enter Search Terms" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="btn">Search</button>
@@ -80,8 +80,7 @@
             <img src="assets/image_edu1.jpeg" class="d-block w-100" alt="First image slide of a handcap using VR">
           </div>
           <div class="carousel-item">
-            <img src="assets/image_edu2.jpeg" class="d-block w-100"
-              alt="Second image slide of a kid playing with VR">
+            <img src="assets/image_edu2.jpeg" class="d-block w-100" alt="Second image slide of a kid playing with VR">
           </div>
           <div class="carousel-item">
             <img src="assets/image_edu3.jpeg" class="d-block w-100"
