--- a/mr4a11y/index.html
+++ b/mr4a11y/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="search.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -54,14 +55,18 @@
           <li class="nav-item">
             <a class="nav-link" href="Contact.html">CONTACT US</a>
           </li>
+          
+
+          <a style="margin-left: 370px" class="btn btn-link" lang="en" hreflang="en" href="index_fr.html"><img src="assets/french flag.jpg" alt=""
+            width="20" height="20"> Passer en Français</a>
         </ul>
-        <div>
-          <a class="btn btn-link" lang="en" hreflang="en" href="index_fr.html"><img src="assets/french flag.jpg" alt=""
-              width="20" height="20"> Passer en Français</a>
-          <form class="form-inline my-2 my-lg-0" role="search">
-            <input class="form-control mr-sm-2" type="search" placeholder="Enter Search Terms" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="btn">Search</button>
+        
+        <div class="box">
+          <form name="search">
+              <input type="text" class="input" name="txt" 
+              onmouseout="document.search.txt.value = ''">
           </form>
+              <i class="fas fa-search"></i>
         </div>
       </div>
     </nav>
