--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="main_fr.css">
+  <link rel="stylesheet" href="search.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/Education.png">
@@ -56,14 +57,15 @@
           <li class="nav-item">
             <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
           </li>
-        </ul>
-        <div>
-          <a class="btn btn-link" lang="fr" hreflang="fr" href="index.html"><img src="assets/british flag.png" alt=""
+            <a style="margin-left: 370px" class="btn btn-link" lang="fr" hreflang="fr" href="index.html"><img src="assets/british flag.png" alt=""
               width="20" height="20"> Switch to English</a>
-          <form class="form-inline my-2 my-lg-0" role="search">
-            <input class="form-control mr-sm-2" type="search" placeholder="Entrez un terme ..." aria-label="Recherche">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="btn">Rechercher</button>
+        </ul>
+        <div class="box">
+          <form name="search">
+              <input type="text" class="input" name="txt" 
+              onmouseout="document.search.txt.value = ''">
           </form>
+              <i class="fas fa-search"></i>
         </div>
       </div>
     </nav>
