--- a/mr4a11y/Contact_fr.html
+++ b/mr4a11y/Contact_fr.html
@@ -23,7 +23,7 @@
     <nav role="navigation" aria-label="Menu principal" class="navbar navbar-expand-lg navbar-light bg-light"
       id="nav-bar">
 
-      <a class="navbar-brand" href="index_fr.html"><img src="assets/CGI.png" alt="Realité Mixte pour l'accessibilité (retour
+      <a class="navbar-brand" href="index_fr.html"><img src="assets/Education.png" alt="Realité Mixte pour l'accessibilité (retour
               à l'accueil)"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Basculer la navigation">
