--- a/mr4a11y/index.html
+++ b/mr4a11y/index.html
@@ -55,18 +55,15 @@
           <li class="nav-item">
             <a class="nav-link" href="Contact.html">CONTACT US</a>
           </li>
-          
-
           <a style="margin-left: 370px" class="btn btn-link" lang="en" hreflang="en" href="index_fr.html"><img src="assets/french flag.jpg" alt=""
             width="20" height="20"> Passer en Français</a>
         </ul>
         
-        <div class="box">
-          <form name="search">
-              <input type="text" class="input" name="txt" 
-              onmouseout="document.search.txt.value = ''">
+        <div>
+          <form class="form-inline my-2 my-lg-0" role="search">
+            <input class="form-control mr-sm-2" type="search" placeholder="Enter Search Terms" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="btn">Search</button>
           </form>
-              <i class="fas fa-search"></i>
         </div>
       </div>
     </nav>
