--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -57,15 +57,14 @@
           <li class="nav-item">
             <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
           </li>
-            <a style="margin-left: 370px" class="btn btn-link" lang="fr" hreflang="fr" href="index.html"><img src="assets/british flag.png" alt=""
+            <a style="margin-left: 300px" class="btn btn-link" lang="fr" hreflang="fr" href="index.html"><img src="assets/british flag.png" alt=""
               width="20" height="20"> Switch to English</a>
         </ul>
-        <div class="box">
-          <form name="search">
-              <input type="text" class="input" name="txt" 
-              onmouseout="document.search.txt.value = ''">
+        <div>
+          <form class="form-inline my-2 my-lg-0" role="search">
+            <input class="form-control mr-sm-2" type="search" placeholder="Enter Search Terms" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="btn">Search</button>
           </form>
-              <i class="fas fa-search"></i>
         </div>
       </div>
     </nav>
