--- a/mr4a11y/aboutUs.html
+++ b/mr4a11y/aboutUs.html
@@ -43,10 +43,11 @@
           <li class="nav-item">
             <a class="nav-link" href="Contact.html">CONTACT US</a>
           </li>
+          
         </ul>
         <div>
-          <a class="btn btn-link" lang="en" hreflang="en" href="aboutUs_fr.html"><img src="assets/french flag.jpg"
-              alt="" width="20" height="20"> Passer en Français</a>
+          <a style="margin-left: 370px"  class="btn btn-link" lang="en" hreflang="en" href="aboutUs_fr.html"><img src="assets/french flag.jpg"
+            alt="" width="20" height="20"> Passer en Français</a>
         </div>
       </div>
     </nav>
