--- a/mr4a11y/explore.html
+++ b/mr4a11y/explore.html
@@ -42,10 +42,10 @@
           <li class="nav-item">
             <a class="nav-link" href="Contact.html">CONTACT US</a>
           </li>
+          <a style="margin-left: 370px" class="btn btn-link" lang="en" hreflang="en" href="explore_fr.html"><img src="assets/french flag.jpg"
+            alt="" width="20" height="20"> Passer en Français</a>
         </ul>
         <div>
-          <a class="btn btn-link" lang="en" hreflang="en" href="explore_fr.html"><img src="assets/french flag.jpg"
-              alt="" width="20" height="20"> Passer en Français</a>
           <form class="form-inline my-2 my-lg-0" role="search">
             <input class="form-control mr-sm-2" type="search" placeholder="Enter Search Terms" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="btn">Search</button>
