--- a/mr4a11y/explore_fr.html
+++ b/mr4a11y/explore_fr.html
@@ -23,7 +23,7 @@
     <nav role="navigation" aria-label="Menu principal" class="navbar navbar-expand-lg navbar-light bg-light"
       id="nav-bar">
 
-      <a class="navbar-brand" href="index_fr.html"><img src="assets/CGI.png" alt="Realité Mixte pour l'accessibilité (retour
+      <a class="navbar-brand" href="index_fr.html"><img src="assets/Education.png" alt="Realité Mixte pour l'accessibilité (retour
               à l'accueil)"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Basculer la navigation">
@@ -44,10 +44,10 @@
           <li class="nav-item">
             <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
           </li>
-        </ul>
-        <div>
-          <a class="btn btn-link" lang="fr" hreflang="fr" href="explore.html"><img src="assets/british flag.png" alt=""
+             <a style="margin-left: 300px" class="btn btn-link" lang="fr" hreflang="fr" href="explore.html"><img src="assets/british flag.png" alt=""
               width="20" height="20"> Switch to English</a>
+        </ul>
+        <div> 
           <form class="form-inline my-2 my-lg-0" role="search">
             <input class="form-control mr-sm-2" type="search" placeholder="Entrez un terme..." aria-label="Recherche">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="btn">Rechercher</button>
