--- a/mr4a11y/Contact_fr.html
+++ b/mr4a11y/Contact_fr.html
@@ -36,10 +36,7 @@
             <a class="nav-link" href="index_fr.html">ACCUEIL</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="explore_fr.html">EXPLORER</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="aboutUs_fr.html">A PROPOS </a>
+            <a class="nav-link" href="explore_fr.html">EN SAVOIR PLUS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
