--- a/mr4a11y/explore.html
+++ b/mr4a11y/explore.html
@@ -34,16 +34,13 @@
             <a class="nav-link" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="explore.html">EXPLORE</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="aboutUs.html">ABOUT US</a>
+            <a class="nav-link" href="explore.html">LEARN MORE</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Contact.html">CONTACT US</a>
           </li>
-          <a style="margin-left: 370px" class="btn btn-link" lang="en" hreflang="en" href="explore_fr.html"><img src="assets/french flag.jpg"
-            alt="" width="20" height="20"> Passer en Français</a>
+          <a style="margin-left: 370px" class="btn btn-link" lang="en" hreflang="en" href="explore_fr.html"><img
+              src="assets/french flag.jpg" alt="" width="20" height="20"> Passer en Français</a>
         </ul>
         <div>
           <form class="form-inline my-2 my-lg-0" role="search">
@@ -54,14 +51,13 @@
       </div>
     </nav>
 
-
   </header>
 
   <main role="main">
     <section id="blog" tabindex="0">
 
       <div class="container1">
-        <h1>Discover Related Articles</h1>
+        <h1>Accessibility of distance learning</h1>
         <div class="row">
 
           <div class="col-md-4 text-center" tabindex="0">
@@ -116,27 +112,6 @@
               </div>
             </div>
           </div>
-
-          <div class="col-md-4 text-center" tabindex="0">
-            <div class="container2" id="module3">
-              <h3>Opportunities For Disabled Users Can Only Grow</h3>
-              <p aria-expanded="false">
-                AR and VR make the impossible possible, that is why most gamers around the world are so into these kinds
-                of technologies, even industries are jumping in on the wagon since they also see the new opportunities
-                for some fantasy world that many people are simply deprived of.
-                All this is without thinking about the future of these technologies
-                in terms of problem-solving in architecture, security, and other sectors. Either way, this new fictional
-                reality gives users room to innovate more. That means that MR for the disable is a massive step forward
-                to allow disabled/handicap people to push their limits. They can see the world in a new light. That
-                could be social, recreational,
-                educational, or vocational. The potential is endless.
-                <span id="img"><img class="img-responsive" src="assets/autism_and_vr.jpg"
-                    alt="autistic kid learning through virtual reality"></span>
-              </p>
-            </div>
-          </div>
-
-
 
         </div>
       </div>
