--- a/mr4a11y/explore_fr.html
+++ b/mr4a11y/explore_fr.html
@@ -36,18 +36,15 @@
             <a class="nav-link" href="index_fr.html">ACCUEIL</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="explore_fr.html">EXPLORER</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="aboutUs_fr.html">A PROPOS </a>
+            <a class="nav-link" href="explore_fr.html">EN SAVOIR PLUS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
           </li>
-             <a style="margin-left: 300px" class="btn btn-link" lang="fr" hreflang="fr" href="explore.html"><img src="assets/british flag.png" alt=""
-              width="20" height="20"> Switch to English</a>
+          <a style="margin-left: 300px" class="btn btn-link" lang="fr" hreflang="fr" href="explore.html"><img
+              src="assets/british flag.png" alt="" width="20" height="20"> Switch to English</a>
         </ul>
-        <div> 
+        <div>
           <form class="form-inline my-2 my-lg-0" role="search">
             <input class="form-control mr-sm-2" type="search" placeholder="Entrez un terme..." aria-label="Recherche">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="btn">Rechercher</button>
@@ -63,7 +60,7 @@
     <section id="blog" tabindex="0">
 
       <div class="container1">
-        <h1>Découvrez Des Articles Connexes</h1>
+        <h1>L'accessibilité des cours à distance</h1>
         <div class="row">
 
           <div class="col-md-4 text-center" tabindex="0">
@@ -121,27 +118,6 @@
               </div>
             </div>
           </div>
-
-          <div class="col-md-4 text-center" tabindex="0">
-            <div class="container2" id="module3">
-              <h3>Les opportunités pour les utilisateurs handicapés ne peuvent que croître</h3>
-              <p aria-expanded="false">
-                La raison pour laquelle la RA et la RV sont si appréciées des joueurs et d'autres industries est
-                qu'elles rendent l'impossible possible. Pour certains, ce ne sont que des jeux qui offrent une nouvelle
-                opportunité dans un monde fantastique; pour d'autres, ce sont des outils de résolution de problèmes dans
-                l'architecture, la sécurité et d'autres secteurs.
-                Quoi qu'il en soit, cette nouvelle réalité permet aux utilisateurs de repousser les limites. Cela
-                signifie que la réalité virtuelle pour la désactivation est un pas en avant massif pour permettre aux
-                personnes incapables de repousser leurs limites. Ils peuvent voir le monde sous un nouveau jour. Cela
-                peut être social, récréatif, éducatif ou professionnel.
-                <span id="img"><img class="img-responsive" src="assets/autism_and_vr.jpg"
-                    alt="enfant autiste apprenant grâce à la réalité virtuelle"></span>
-
-              </p>
-            </div>
-          </div>
-
-
 
         </div>
       </div>
