--- a/mr4a11y/index.html
+++ b/mr4a11y/index.html
@@ -45,20 +45,17 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="explore.html">EXPLORE</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="aboutUs.html">ABOUT US</a>
+            <a class="nav-link" href="explore.html">
+              LEARN MORE</a>
           </li>
 
           <li class="nav-item">
             <a class="nav-link" href="Contact.html">CONTACT US</a>
           </li>
-          <a style="margin-left: 370px" class="btn btn-link" lang="en" hreflang="en" href="index_fr.html"><img src="assets/french flag.jpg" alt=""
-            width="20" height="20"> Passer en Français</a>
+          <a style="margin-left: 370px" class="btn btn-link" lang="en" hreflang="en" href="index_fr.html"><img
+              src="assets/french flag.jpg" alt="" width="20" height="20"> Passer en Français</a>
         </ul>
-        
+
         <div>
           <form class="form-inline my-2 my-lg-0" role="search">
             <input class="form-control mr-sm-2" type="search" placeholder="Enter Search Terms" aria-label="Search">
