--- a/mr4a11y/Contact.html
+++ b/mr4a11y/Contact.html
@@ -35,10 +35,7 @@
             <a class="nav-link" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="explore.html">EXPLORE</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="aboutUs.html">ABOUT US</a>
+            <a class="nav-link" href="explore.html">LEARN MORE</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Contact.html">CONTACT US</a>
@@ -46,9 +43,9 @@
         </ul>
         <div>
           <a class="btn btn-link" lang="en" hreflang="en" href="Contact_fr.html"><img src="assets/french flag.jpg"
-            alt="" width="20" height="20"> Passer en Français</a>
+              alt="" width="20" height="20"> Passer en Français</a>
         </div>
-      
+
       </div>
     </nav>
 
