--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -46,19 +46,14 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="explore_fr.html">
-              EXPLORER</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="aboutUs_fr.html">À PROPOS </a>
+            <a class="nav-link" href="explore_fr.html">EN SAVOIR PLUS</a>
           </li>
 
           <li class="nav-item">
             <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
           </li>
-            <a style="margin-left: 300px" class="btn btn-link" lang="fr" hreflang="fr" href="index.html"><img src="assets/british flag.png" alt=""
-              width="20" height="20"> Switch to English</a>
+          <a style="margin-left: 300px" class="btn btn-link" lang="fr" hreflang="fr" href="index.html"><img
+              src="assets/british flag.png" alt="" width="20" height="20"> Switch to English</a>
         </ul>
         <div>
           <form class="form-inline my-2 my-lg-0" role="search">
