--- a/mr4a11y/explore.html
+++ b/mr4a11y/explore.html
@@ -60,7 +60,7 @@
         <h1>Accessibility of distance learning</h1>
         <div class="row">
 
-          <div class="col-md-4 text-center" tabindex="0">
+          <div style="width: 45% ; height: 10% ; float: left ;margin-left: 40px;"  tabindex="0">
             <div class="container2" id="module1">
               <h3>Applications Of Mixed Reality</h3>
               <p aria-expanded="false">
@@ -82,7 +82,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 text-center" tabindex="0">
+          <div style="width: 45% ; height: 100% ; float: left ; margin-left: 70px;"  tabindex="0">
             <div class="container2" id="module2">
               <h3>How Mixed Reality can Help Disabled People</h3>
               <div aria-expanded="false">
