footer + delete pictures

--- a/mr4a11y/index.html
+++ b/mr4a11y/index.html
@@ -165,7 +165,9 @@
 
   <footer role="contentinfo" tabindex="0">
     <div id="footer">
-      <span>@Lorraine University 2020/2021 - Human Computer Interaction </span>
+      <span>@2022 </span>
+      <img src="assets/univ_lorraine.png" alt="Lorraine University" width="150" height="55">
+      <span>Human Computer Interaction </span>
     </div>
   </footer>
 </body>
