--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -168,7 +168,9 @@
 
   <footer role="contentinfo" tabindex="0">
     <div id="footer">
-      <span>Université de Lorraine 2021/2022 - Interaction Humain Machine </span>
+      <span>@2022 </span>
+      <img src="assets/univ_lorraine.png" alt="Université de Lorraine" width="150" height="55">
+      <span>Interaction Humain Machine </span>
     </div>
   </footer>
 </body>
