--- a/mr4a11y/explore_fr.html
+++ b/mr4a11y/explore_fr.html
@@ -65,22 +65,30 @@
 
           <div class="col-md-4 text-center" tabindex="0">
             <div class="container2" id="module1">
-              <h3>Applications de la réalité mixte</h3>
+              <h3>Centre national d'enseignement à distance</h3>
               <p aria-expanded="false">
-                La réalité mixte existe depuis des années, mais ce n'est qu'au cours des 10 dernières années qu'elle est
-                remontée à la surface grâce au développement avancé de smartphones avec Android et iOS, équipés de
-                gyroscopes, de GPS et de caméras qui s'améliorent de plus en plus avec les années. venir. Ce
-                développement a conduit à la réalisation de véritables capacités pour la réalité mixte. Ce dernier
-                combine la réalité virtuelle et le monde réel sous forme de vidéos graphiquement améliorées. Et peut
-                être expérimenté soit avec des casques que les gens portent, soit simplement avec des appareils mobiles
-                que nous avons avec nous tous les jours.
-                <span id="img"><img class="img-responsive" src="assets/Mobile_device_showing_augmented_reality.jpg"
-                    alt="Appareil mobile montrant la réalité augmentée"></span>
-                Les militaires utilisent la réalité augmentée pour aider les hommes et les femmes à effectuer des
-                réparations sur le terrain. Le personnel médical utilise la RA pour se préparer aux chirurgies. Les
-                applications commerciales et éducatives possibles sont illimitées. Surtout lors de la dernière pandémie
-                où la distance représentait un énorme obstacle pour l'éducation. MR a encore de la place pour prouver
-                que cela peut être LA solution dans de telles circonstances.
+                Le CNED (Centre national d'enseignement à distance) est probablement le plus grand établissement public
+                du ministère de l’éducation national pour ce qui est des formations à distance. Il offre depuis 1939 un
+                service d’enseignement par correspondance pour répondre aux besoins du pays qui vient d'entrer dans la
+                Seconde Guerre mondiale.
+                <br>
+                C’est en 1997 que le CNED fait son entrée sur internet.
+                L'établissement numérique devient évidemment un atout pour les personnes en situation de handicape. En
+                effet, que ce soit pour des problèmes dû directement à l'établissement (structure non adaptée, personnel
+                accompagnant manquant etc.) ou pour des problèmes externes (transport jusqu’à l'établissement par
+                exemple), les établissements scolaires ne sont, encore aujourd’hui, pas toujours accessibles.
+                <br>
+                Aujourd’hui encore plus, avec la pandémie de COVID-19, il est primordial d’avoir accès à un
+                environnement de travail et à des cours accessibles.
+                <span id="img"><img class="img-responsive" src="assets/cles_de_la_reussite.png"
+                    alt="Les clés de la réussite"></span>
+                En 2013, le CNED signe une convention avec le FIPHFP (Fonds pour l'insertion des personnes handicapées
+                dans la fonction publique) afin de rendre leur site accessible à tous, professeurs et élèves. Le 3
+                septembre 2021, date de la dernière mise à jour de leur déclaration d’accessibilité, le site respectait
+                75% des critères du RGAA version 4.1 pour les parties sans espace personnel et seulement 59% pour les
+                parties connectées. C’est un point important à régler afin de garantir les mêmes chances de réussite à
+                tous. On peut noter que chaque année, le site met sa déclaration à jour et qu’ils continuent leur plan
+                d’action pour l'accessibilité.
               </p>
             </div>
           </div>
