--- a/mr4a11y/explore.html
+++ b/mr4a11y/explore.html
@@ -62,7 +62,7 @@
 
           <div style="width: 45% ; height: 10% ; float: left ;margin-left: 40px;" tabindex="0">
             <div class="container2" id="module1">
-              <h3>Applications Of Mixed Reality</h3>
+              <h3>National Center for Distance Education</h3>
               <p aria-expanded="false">
                 The CNED (Centre national d'enseignement à distance) is probably the largest public establishment of the
                 Ministry of National Education in terms of distance education. Since 1939, it has offered a
