--- a/mr4a11y/explore_fr.html
+++ b/mr4a11y/explore_fr.html
@@ -65,7 +65,7 @@
 
           <div class="col-md-4 text-center" tabindex="0">
             <div class="container2" id="module1">
-              <h3>Centre national d'enseignement à distance</h3>
+              <h3>Centre National d'Enseignement à Distance</h3>
               <p aria-expanded="false">
                 Le CNED (Centre national d'enseignement à distance) est probablement le plus grand établissement public
                 du ministère de l’éducation national pour ce qui est des formations à distance. Il offre depuis 1939 un
