--- a/mr4a11y/explore_fr.html
+++ b/mr4a11y/explore_fr.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="main_fr.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/Education.png">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
@@ -41,14 +41,13 @@
           <li class="nav-item">
             <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
           </li>
-          <a style="margin-left: 300px" class="btn btn-link" lang="fr" hreflang="fr" href="explore.html"><img
-              src="assets/british flag.png" alt="" width="20" height="20"> Switch to English</a>
+          <li class="nav-item">
+            <a class="nav-link" href="sources_fr.html">SOURCES</a>
+          </li>
         </ul>
         <div>
-          <form class="form-inline my-2 my-lg-0" role="search">
-            <input class="form-control mr-sm-2" type="search" placeholder="Entrez un terme..." aria-label="Recherche">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="btn">Rechercher</button>
-          </form>
+          <a class="btn btn-link" lang="fr" hreflang="fr" href="Contact.html"><img src="assets/british flag.png" alt=""
+              width="20" height="20"> Switch to English</a>
         </div>
       </div>
     </nav>
@@ -63,7 +62,7 @@
         <h1>L'accessibilité des cours à distance</h1>
         <div class="row">
 
-          <div class="col-md-4 text-center" tabindex="0">
+          <div style="width: 45% ; height: 10% ; float: left ;margin-left: 40px;" tabindex="0">
             <div class="container2" id="module1">
               <h3>Applications de la réalité mixte</h3>
               <p aria-expanded="false">
@@ -85,7 +84,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 text-center" tabindex="0">
+          <div style="width: 45% ; height: 100% ; float: left ; margin-left: 70px;" tabindex="0">
             <div class="container2" id="module2">
               <h3>Comment la réalité mixte peut aider les personnes handicapées</h3>
               <div aria-expanded="false">
