--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -52,6 +52,9 @@
           <li class="nav-item">
             <a class="nav-link" href="Contact_fr.html">NOUS CONTACTER</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sources_fr.html">SOURCES</a>
+          </li>
           <a style="margin-left: 300px" class="btn btn-link" lang="fr" hreflang="fr" href="index.html"><img
               src="assets/british flag.png" alt="" width="20" height="20"> Switch to English</a>
         </ul>
