--- a/mr4a11y/sources.html
+++ b/mr4a11y/sources.html
@@ -48,19 +48,30 @@
           <a class="btn btn-link" lang="en" hreflang="en" href="Contact_fr.html"><img src="assets/french flag.jpg"
               alt="" width="20" height="20"> Passer en Français</a>
         </div>
-        <main role="main">
-          <section id="blog" tabindex="0">
-      
-              <div class="container1">
-                <h1>Sources</h1>
-                  <div class="row">
-                  </div>
-              </div>
-          </section>
-        </main>
-
       </div>
     </nav>
+    <main role="main">
+      <section id="blog" tabindex="0">
+  
+        <div class="container1">
+          <h1>Sources</h1>
+          <div class="row">
+  
+            
+
+  
+          </div>
+        </div>
+      </section>
+    </main>
+  
+    <footer role="contentinfo" tabindex="0">
+      <div id="footer">
+        <span>@2022 </span>
+        <img src="assets/univ_lorraine.png" alt="Lorraine University" width="150" height="55">
+        <span>Human Computer Interaction </span>
+      </div>
+    </footer>
 
 
   </header>
