alt des images header

--- a/mr4a11y/Contact.html
+++ b/mr4a11y/Contact.html
@@ -21,7 +21,7 @@
 <body>
   <header role="banner">
     <nav role="navigation" aria-label="Main Menu" class="navbar navbar-expand-lg navbar-light bg-light" id="nav-bar">
-      <a class="navbar-brand" href="index.html"><img src="assets/Education.png" alt="Mixed reality for accessibility (Back
+      <a class="navbar-brand" href="index.html"><img src="assets/Education.png" alt="Website Logo (Back
               to Home)"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
         </ul>
         <div>
           <a class="btn btn-link" lang="en" hreflang="en" href="Contact_fr.html"><img src="assets/french flag.jpg"
-              alt="" width="20" height="20"> Passer en Français</a>
+              alt="French flag to switch the language" width="20" height="20"> Passer en Français</a>
         </div>
 
       </div>
