--- a/mr4a11y/Contact_fr.html
+++ b/mr4a11y/Contact_fr.html
@@ -23,7 +23,7 @@
     <nav role="navigation" aria-label="Menu principal" class="navbar navbar-expand-lg navbar-light bg-light"
       id="nav-bar">
 
-      <a class="navbar-brand" href="index_fr.html"><img src="assets/Education.png" alt="Realité Mixte pour l'accessibilité (retour
+      <a class="navbar-brand" href="index_fr.html"><img src="assets/Education.png" alt="Logo site (retour
               à l'accueil)"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Basculer la navigation">
@@ -46,8 +46,8 @@
           </li>
         </ul>
         <div>
-          <a class="btn btn-link" lang="fr" hreflang="fr" href="Contact.html"><img src="assets/british flag.png" alt=""
-              width="20" height="20"> Switch to English</a>
+          <a class="btn btn-link" lang="fr" hreflang="fr" href="Contact.html"><img src="assets/british flag.png"
+              alt="Drapeau anglais pour changer la langue" width="20" height="20"> Switch to English</a>
         </div>
       </div>
     </nav>
@@ -85,7 +85,7 @@
       <span>Interaction Humain Machine </span>
     </div>
   </footer>
-  
+
 </body>
 
 </html>
