--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -24,7 +24,7 @@
 
     <nav role="navigation" aria-label="Menu principal" class="navbar navbar-expand-lg navbar-light bg-light"
       id="nav-bar">
-      <a class="navbar-brand" href="index_fr.html"><img src="assets/Education.png" alt="Realité Mixte pour l'accessibilité (Retour
+      <a class="navbar-brand" href="index_fr.html"><img src="assets/Education.png" alt="Logo site (Retour
         à l'accueil)">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -56,7 +56,8 @@
             <a class="nav-link" href="sources_fr.html">SOURCES</a>
           </li>
           <a style="margin-left: 300px" class="btn btn-link" lang="fr" hreflang="fr" href="index.html"><img
-              src="assets/british flag.png" alt="" width="20" height="20"> Switch to English</a>
+              src="assets/british flag.png" alt="Drapeau anglais pour changer la langue" width="20" height="20"> Switch
+            to English</a>
         </ul>
         <div>
           <form class="form-inline my-2 my-lg-0" role="search">
