--- a/mr4a11y/explore.html
+++ b/mr4a11y/explore.html
@@ -21,7 +21,7 @@
 <body>
   <header role="banner">
     <nav role="navigation" aria-label="Main Menu" class="navbar navbar-expand-lg navbar-light bg-light" id="nav-bar">
-      <a class="navbar-brand" href="index.html"><img src="assets/Education.png" alt="Mixed reality for accessibility (Back
+      <a class="navbar-brand" href="index.html"><img src="assets/Education.png" alt="Website Logo (Back
               to Home)"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,8 @@
             <a class="nav-link" href="sources.html">SOURCES</a>
           </li>
           <a style="margin-left: 370px" class="btn btn-link" lang="en" hreflang="en" href="explore_fr.html"><img
-              src="assets/french flag.jpg" alt="" width="20" height="20"> Passer en Français</a>
+              src="assets/french flag.jpg" alt="French flag to switch the language" width="20" height="20"> Passer en
+            Français</a>
         </ul>
         <div>
           <form class="form-inline my-2 my-lg-0" role="search">
