--- a/mr4a11y/sources.html
+++ b/mr4a11y/sources.html
@@ -15,13 +15,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
-  <title>Contact US</title>
+  <title>Contact Us</title>
 </head>
 
 <body>
   <header role="banner">
     <nav role="navigation" aria-label="Main Menu" class="navbar navbar-expand-lg navbar-light bg-light" id="nav-bar">
-      <a class="navbar-brand" href="index.html"><img src="assets/Education.png" alt="Mixed reality for accessibility (Back
+      <a class="navbar-brand" href="index.html"><img src="assets/Education.png" alt="Website Logo (Back
               to Home)"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,25 +46,25 @@
         </ul>
         <div>
           <a class="btn btn-link" lang="en" hreflang="en" href="Contact_fr.html"><img src="assets/french flag.jpg"
-              alt="" width="20" height="20"> Passer en Français</a>
+              alt="French flag to switch the language" width="20" height="20"> Passer en Français</a>
         </div>
       </div>
     </nav>
     <main role="main">
       <section id="blog" tabindex="0">
-  
+
         <div class="container1">
           <h1>Sources</h1>
           <div class="row">
-  
-            
 
-  
+
+
+
           </div>
         </div>
       </section>
     </main>
-  
+
     <footer role="contentinfo" tabindex="0">
       <div id="footer">
         <span>@2022 </span>
