--- a/mr4a11y/sources.html
+++ b/mr4a11y/sources.html
@@ -55,12 +55,15 @@
   
         <div class="container1">
           <h1>Sources</h1>
-          <div class="row">
+              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+              
   
-            
-
-  
-          </div>
         </div>
       </section>
     </main>
