--- a/mr4a11y/sources_fr.html
+++ b/mr4a11y/sources_fr.html
@@ -51,6 +51,32 @@
         </div>
       </div>
     </nav>
+    <main role="main">
+      <section id="blog" tabindex="0">
+  
+        <div class="container1">
+          <h1>Sources</h1>
+              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+              
+  
+        </div>
+      </section>
+    </main>
+  
+    <footer role="contentinfo" tabindex="0">
+      <div id="footer">
+        <span>@2022 </span>
+        <img src="assets/univ_lorraine.png" alt="Lorraine University" width="150" height="55">
+        <span>Human Computer Interaction </span>
+      </div>
+    </footer>
+
   </header>
 
 </body>
