--- a/mr4a11y/Contact_fr.html
+++ b/mr4a11y/Contact_fr.html
@@ -54,6 +54,29 @@
   </header>
 
   <main role="main">
+    <div class="container">
+      <div class="row">
+        <div class="col" tabindex="0">
+          <div id="intro">
+            <h1>Equipe & Objectifs</h1>
+            <span>
+              L'équipe est composée de trois étudiants en Master 2 - Spécialité Interface Humain-Machine :
+              <br>
+              <ul>
+                <li> <b>CABASSON Guillaume</b></li>
+                <li><b>LAHOUAR Ibrahim</b></li>
+                <li> <b>LEMIERE Camille</b>
+              </ul>
+              <br>
+              Ce site a été réalisé dans le cadre du cours d'Ergonomie et Facteurs Humains pour l'Accessibilité.
+
+            </span>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
     <form id="form">
       <h2>Nous Contacter</h2>
       <div class="form-row">
