--- a/mr4a11y/explore_fr.html
+++ b/mr4a11y/explore_fr.html
@@ -23,8 +23,8 @@
     <nav role="navigation" aria-label="Menu principal" class="navbar navbar-expand-lg navbar-light bg-light"
       id="nav-bar">
 
-      <a class="navbar-brand" href="index_fr.html"><img src="assets/Education.png" alt="Realité Mixte pour l'accessibilité (retour
-              à l'accueil)"></a>
+      <a class="navbar-brand" href="index_fr.html"><img src="assets/Education.png" alt="Logo site (retour
+        à l'accueil)"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Basculer la navigation">
         <span class="navbar-toggler-icon"></span>
