--- a/mr4a11y/Contact.html
+++ b/mr4a11y/Contact.html
@@ -55,8 +55,30 @@
 
   </header>
 
-
+  <br>
   <main role="main">
+    <div class="container">
+      <div class="row">
+        <div class="col" tabindex="0">
+          <div id="intro">
+            <h1>Team & Goals</h1>
+            <span>
+              The team is composed of three students in Master 2 - Human-Machine Interface Specialty :
+              <br>
+              <ul>
+                <li> <b>CABASSON Guillaume</b></li>
+                <li> <b>LAHOUAR Ibrahim</b></li>
+                <li> <b>LEMIERE Camille</b>
+              </ul>
+              <br>
+              This site was created as part of the Ergonomics and Human Factors for Accessibility course.
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <br>
     <form id="form">
       <h2>Contact Us</h2>
       <div class="form-row">
