integration vidéo + change language redirection OK

--- a/mr4a11y/explore_fr.html
+++ b/mr4a11y/explore_fr.html
@@ -46,7 +46,7 @@
           </li>
         </ul>
         <div>
-          <a class="btn btn-link" lang="fr" hreflang="fr" href="Contact.html"><img src="assets/british flag.png"
+          <a class="btn btn-link" lang="fr" hreflang="fr" href="explore.html"><img src="assets/british flag.png"
               alt="Drapeau anglais pour changer la langue" width="20" height="20"> Switch to English</a>
         </div>
       </div>
