--- a/mr4a11y/index.html
+++ b/mr4a11y/index.html
@@ -53,7 +53,7 @@
           <li class="nav-item">
             <a class="nav-link" href="sources.html">SOURCES</a>
           </li>
-          <a style="margin-left: 370px" class="btn btn-link" lang="en" hreflang="en" href="explore_fr.html"><img
+          <a style="margin-left: 370px" class="btn btn-link" lang="en" hreflang="en" href="index_fr.html"><img
               src="assets/french flag.jpg" alt="French flag to switch the language" width="20" height="20"> Passer en
             Français</a>
         </ul>
@@ -150,10 +150,11 @@
                 vision.
               </div>
               <div class="iframe-container">
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/0LBKNC7xj6M?start=2"
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KPbD3lm5vao?start=9"
                   frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen title="Youtube video about woman who sees for the first time"></iframe>
+                  allowfullscreen title="Video on disability awareness for young high school students in Narbonne
+                  "></iframe>
               </div>
             </div>
           </div>
