--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -155,11 +155,10 @@
                 une vision limitée.
               </div>
               <div class="iframe-container">
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/0LBKNC7xj6M?start=2"
-                  frameborder="0"
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KPbD3lm5vao?start=9"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen
-                  title="Video Youtube d'une femme qui a récuperer sa vision pour la première fois après 8 ans"></iframe>
+                  title="Vidéo sur la sensibilisation au handicap de jeunes lycéens de Narbonne"></iframe>
               </div>
             </div>
           </div>
