--- a/mr4a11y/sources.html
+++ b/mr4a11y/sources.html
@@ -45,7 +45,7 @@
           </li>
         </ul>
         <div>
-          <a class="btn btn-link" lang="en" hreflang="en" href="Contact_fr.html"><img src="assets/french flag.jpg"
+          <a class="btn btn-link" lang="en" hreflang="en" href="sources_fr.html"><img src="assets/french flag.jpg"
               alt="French flag to switch the language" width="20" height="20"> Passer en Français</a>
         </div>
       </div>
@@ -55,15 +55,15 @@
 
         <div class="container1">
           <h1>Sources</h1>
-              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-              
-  
+          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+
+
 
         </div>
       </section>
