--- a/mr4a11y/sources_fr.html
+++ b/mr4a11y/sources_fr.html
@@ -46,29 +46,29 @@
           </li>
         </ul>
         <div>
-          <a class="btn btn-link" lang="fr" hreflang="fr" href="Contact.html"><img src="assets/british flag.png"
+          <a class="btn btn-link" lang="fr" hreflang="fr" href="sources.html"><img src="assets/british flag.png"
               alt="Drapeau anglais pour changer la langue" width="20" height="20"> Switch to English</a>
         </div>
       </div>
     </nav>
     <main role="main">
       <section id="blog" tabindex="0">
-  
+
         <div class="container1">
           <h1>Sources</h1>
-              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-              <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
-              
-  
+          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+          <h3><a href="#" style="text-align: center; ">SOURCE 1</a></h3>
+
+
         </div>
       </section>
     </main>
-  
+
     <footer role="contentinfo" tabindex="0">
       <div id="footer">
         <span>@2022 </span>
