Obtenir la retranscription

--- a/mr4a11y/index_fr.html
+++ b/mr4a11y/index_fr.html
@@ -160,6 +160,9 @@
                   allowfullscreen
                   title="Vidéo sur la sensibilisation au handicap de jeunes lycéens de Narbonne"></iframe>
               </div>
+              <div>
+                <a class="nav-link" href="retranscription.html">Obtenir la retranscription</a>
+              </div>
             </div>
           </div>
 
